@@ -5,6 +5,9 @@ This document, at this point, is a proposal only. It attempts to
 document how we intend to make the upcoming releases, in order to make
 as sure as possible no stupid bugs creep in just before the release.
 
+Talk to James K. Lowden before releasing next time about how to set up a
+release branch.
+
 Contents
 --------
 
